<resources>
    <string name="app_name">DevPlanner</string>
    <string name="app_name_upper">DEVPLANNER</string>
    <string name="inicio_sesion_text">Iniciar sesión con</string>
    <string name="google_text">Google</string>
    <string name="facebook_text">Facebook</string>
    <string name="apple_text">Apple</string>
    <string name="correo_text">Correo</string>
    <string name="contrasena_text">Contraseña</string>
    <string name="login_text">Ingresar</string>
    <string name="alarmas_title">Mis alarmas</string>
    <string name="record_init_msg">Presione para grabar</string>
    <string name="cancel_text">Cancelar</string>
    <string name="save_text">Guardar</string>
    <string name="name_text">Nombre</string>
    <string name="description_text">Descripción</string>
    <string name="date_text">Fecha</string>
    <string name="hour_text">Hora</string>
    <string name="share_text">Añadir a:</string>
    <string name="priority_text">Prioridad:</string>
    <string name="voice_text">Voz</string>
    <string name="tune_text">Tono</string>
</resources>