<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/md_theme_primary"
    tools:context=".CreateAlarmActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/app_name_upper"
                android:fontFamily="@font/nico_moji"
                android:textColor="@color/md_theme_onPrimary" />

        </LinearLayout>
    </Toolbar>
    <View
        android:layout_marginTop="60dp"
        style="@style/Divider" />

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/name_text"
            android:textColor="@color/md_theme_onPrimary"
            android:textColorHint="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/name_input" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/description_text"
            android:textColor="@color/md_theme_onPrimary"
            android:textColorHint="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/description_input" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/date_text"
            android:textColor="@color/md_theme_onPrimary"
            android:textColorHint="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="date"
            android:id="@+id/date_input" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/hour_text"
            android:textColor="@color/md_theme_onPrimary"
            android:textColorHint="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="date"
            android:id="@+id/hour_input" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:textColor="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:text="@string/share_text" />

        <LinearLayout
            android:id="@+id/tools_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/github_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/github" />

            <ImageView
                android:id="@+id/jira_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/jira" />

            <ImageView
                android:id="@+id/google_meet_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:src="@drawable/google_meet" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:textColor="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:text="@string/priority_text" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:textColor="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:text="@string/share_text"
            android:background="@drawable/rounded_corner"
            android:spinnerMode="dropdown"
            android:padding="18dp"
            android:id="@+id/priority_dropdown"/>


        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:padding="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="32dp"
                android:textSize="20sp"
                android:id="@+id/cancel_btn"
                app:strokeColor="@color/md_theme_onPrimary"
                app:strokeWidth="3dp"
                app:cornerRadius="18dp"
                app:backgroundTint="@color/md_theme_primary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_text"
                android:padding="18dp"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="32dp"
                android:textSize="20sp"
                android:id="@+id/create_alarm_btn"
                app:strokeColor="@color/md_theme_onPrimary"
                app:strokeWidth="3dp"
                app:cornerRadius="18dp"
                app:backgroundTint="@color/md_theme_primary"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>