<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/devplanner_logo"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/correo_text"
            android:textColor="@color/md_theme_onPrimary"
            android:textColorHint="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email_input" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/contrasena_text"
            android:textColor="@color/md_theme_onPrimary"
            android:textColorHint="@color/md_theme_onPrimary"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/password_input" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:padding="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="32dp"
            android:textSize="20sp"
            android:id="@+id/login1_btn"
            app:strokeColor="@color/md_theme_onPrimary"
            app:strokeWidth="3dp"
            app:cornerRadius="18dp"
            app:backgroundTint="@color/md_theme_primary"/>

    </LinearLayout>

</RelativeLayout>